--- a/packages/websites/coffeekraken-io/src/README
+++ b/packages/websites/coffeekraken-io/src/README
@@ -4,7 +4,7 @@
  * @type            Markdown
  * @platform        md
  * @status          stable
- * @menu            Packages / Coffeekraken.io           /packages/coffeekraken-io
+ * @menu            Documentation               /doc/readme
  *
  * @since           2.0.0
  * @author    Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
