--- a/packages/websites/coffeekraken-io/src/doc/03-css/10-ui.md
+++ b/packages/websites/coffeekraken-io/src/doc/03-css/10-ui.md
@@ -18,37 +18,32 @@
 
 Coffeekraken comes with a lot of UI elements ready to use out of the box and fully customizable. Here's a small list:
 
--   `Avatar`
--   `Buttons`
--   `Lists`
--   `Tooltips`
--   `Dropdowns`
--   `Tabs`
--   `Icons`
--   And more to discover in the [styleguide UI documentation](/styleguide/ui/buttons)
+{{#each uis}}
+
+-   [**{{this.name}}**]({{this.menu.slug}})
+    {{/each}}
 
 ## Theming
 
 All of these UI elements are customizable using plain CSS as well but the main properties like the color, border radius, etc... are themable through your theme configuration like so:
 
+1. Create a `themeUi.config.ts` file into your `.sugar` root package folder
+2. Override the theme UI configurations like so:
+
 ```js
 {
-    themePath...: {
-        ui: {
-            button: {
-                defaultColor: 'accent',
-                defaultStyle: 'outline',
-                depth: 0
-                // etc...
-            },
-            avatar: {
-                borderWidth: '4px',
-                depth: 20
-                // etc...
-            }
-            // etc...
-        }
+    button: {
+        defaultColor: 'accent',
+        defaultStyle: 'outline',
+        depth: 0
+        // etc...
+    },
+    avatar: {
+        borderWidth: '4px',
+        depth: 20
+        // etc...
     }
+    // etc...
 }
 ```
 
@@ -61,19 +56,15 @@ In order to keep all of these configurations clean and easy to override, some of
 
 ```js
 {
-    themePath...: {
-        ui: {
-            default: {
-                defaultColor: 'accent'
-                // etc...
-            },
-            button: {
-                defaultColor: '[theme.ui.default.defaultColor]'
-                // etc...
-            }
-            // etc...
-        }
+    default: {
+        defaultColor: 'accent'
+        // etc...
+    },
+    button: {
+        defaultColor: '[theme.ui.default.defaultColor]'
+        // etc...
     }
+    // etc...
 }
 ```
 
